Changelog for HLint

1.6.8
    #213, upgrade to cpphs 1.9
    Add suggestion to replace lambda with operator sections
    Fix bug, ''Name decided TemplateHaskell was unnecessary
    HPC statistics, and increase in test coverage
    Fix bug, import A as Y; import A gave import A, missing the as Y
    Fix bug, type Foo a = Bar a a incorrectly suggested eta reduce
1.6.7
    NOTE: #213 has not been fixed, cpphs can cause hangs
    Add threaded flag to Cabal to disable -threaded mode
    #212, fix crash
    Fix bug, incorrectly decided TemplateHaskell was unnecessary
1.6.6
    Upgrade to hscolour 1.15
    Add a hint for using unless
    #211, add hints for unused extensions
    #188, add pragma hints
    Add a few additional hints (Functor laws)
    #137, add cpphs support
    #189, give hints for redundant imports
    Upgrade to haskell-src-exts 1.1.*
1.6.5
    #206, better presentation of parse errors
    #208, give the correct precedence to ==> in source files
1.6.4
    Start of changelog